syntax = "proto3";
package cli;

import "google/protobuf/any.proto";
import "google/protobuf/descriptor.proto";

option go_package = "github.com/rancher/opni/internal/codegen/cli";

extend google.protobuf.FileOptions {
  GeneratorOptions generator = 25600;
}

extend google.protobuf.FieldOptions {
  FlagOptions flag = 25601;
  FlagSetOptions flag_set = 25602;
}

extend google.protobuf.ServiceOptions {
  CommandGroupOptions command_group = 25600;
}

extend google.protobuf.MethodOptions {
  CommandOptions command = 25600;
}

enum ClientDependencyInjectionStrategy {
  InjectIntoContext = 0;
  InjectAsArgument  = 1;
}

message GeneratorOptions {
  bool                              generate                    = 1;
  bool                              generate_deepcopy           = 2;
  ClientDependencyInjectionStrategy client_dependency_injection = 3;
}

message FlagOptions {
  string default       = 1;
  string env           = 2;
  bool   secret        = 3;
  string type_override = 4;
  bool   skip          = 5;
}

message FlagSetOptions {
  google.protobuf.Any default = 1;
}

message CommandGroupOptions {
  string use      = 25601;
  string group_id = 25602;
}

message CommandOptions {
  string          use            = 25601;
  repeated string required_flags = 25603;
}
